# log-generator

./: .flake8  .gitignore  .pylintrc  404.html  Dockerfile  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: doc.yaml  pipeline.yaml  test.yaml
app_factory/: index.html
configuration/: index.html
docs/: configuration.md  index.md  installation.md
docs/how_to_use/: restful_api.md  web_page.md
docs/logging/: config.md  formatter.md  handler.md
docs/logging_config/: logging_config.md  logging_formatter.md
docs/references/: env_vars.md
docs/routes/: api.md  home.md  ui.md
how_to_use/restful_api/: index.html
how_to_use/web_page/: index.html
installation/: index.html
log_generator/: __init__.py  logging_config.py
log_generator/controller/: api.py  api_utils.py  home.py  ui.py
log_generator/logging/: __init__.py  config.py  formatter.py  handler.py
log_generator/static/css/: style.css
log_generator/static/js/: script.js
log_generator/templates/: home.html
logging/config/: index.html
logging/formatter/: index.html
logging/handler/: index.html
nginx/: nginx.conf
references/env_vars/: index.html
routes/api/: index.html
routes/ui/: index.html
tests/: conftest.py  sauce_job_result.py  simple_live_server.py  test_api_route.py  test_demo.py  test_home_route.py  test_ui_route.py
tests/pages/: home_page.py  ui_page.py
